--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,12 +1,58 @@
+:root {
+  font-size: 16px;
+  --branding-color: #f7ba1d;
+  --secondary-color: #fbfffc;
+  --heading-font-family: "Playfair Display", serif;
+  --default-font-family: "Poppins", sans-serif;
+}
+
 body {
+  font-family: var(--default-font-family);
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: var(--heading-font-family);
+  font-weight: bold;
 }
 
 h1 {
-  font-family: "Playfair Display", serif;
+  font-size: 5rem;
   font-weight: bold;
 }
 
 p {
-  font-family: "Poppins", sans-serif;
   font-weight: normal;
+}
+
+.hero {
+  background-color: var(--secondary-color);
+  text-align: center;
+  padding: 160px 20px;
+}
+
+.hero p {
+  font-size: 2.25rem;
+  font-weight: bold;
+  margin: 0;
+}
+
+.hero h2 {
+  font-weight: normal;
+  font-size: 1.5rem;
+  line-height: 2;
+  color: #272142;
+}
+
+.btn-branding {
+  background: var(--branding-color);
+  border-radius: 4px;
+  color: white;
+  font-size: 1.13rem;
+  line-height: 27px;
+  padding: 15px 30px;
 }
