--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,7 +1,9 @@
 :root {
   font-size: 16px;
-  --branding-color: #f7ba1d;
-  --secondary-color: #fbfffc;
+  --branding-color: #eb455f;
+  --secondary-color: #fcffe7;
+  --aditional-color: #bad7e9;
+  --footer-color: #2b3467;
   --heading-font-family: "Playfair Display", serif;
   --default-font-family: "Poppins", sans-serif;
 }
@@ -23,10 +25,17 @@ h6 {
 h1 {
   font-size: 5rem;
   font-weight: bold;
+  line-height: 1.5;
+}
+
+h2 {
+  font-size: 4rem;
 }
 
 p {
   font-weight: normal;
+  font-size: 1rem;
+  line-height: 1.8rem;
 }
 
 .hero {
@@ -42,6 +51,7 @@ p {
 }
 
 .hero h2 {
+  font-family: var(--default-font-family);
   font-weight: normal;
   font-size: 1.5rem;
   line-height: 2;
@@ -55,4 +65,23 @@ p {
   font-size: 1.13rem;
   line-height: 27px;
   padding: 15px 30px;
+}
+
+.project-description {
+  padding: 20px 40px;
+}
+
+@media (max-width: 900px) {
+  h1 {
+    font-size: 3rem;
+  }
+
+  h2 {
+    font-size: 2rem;
+  }
+
+  .project-description {
+    padding: 0;
+    text-align: center;
+  }
 }
