--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -73,11 +73,16 @@ p {
 
 @media (max-width: 900px) {
   h1 {
-    font-size: 3rem;
+    font-size: 3.5rem;
+    line-height: 1.5;
   }
 
   h2 {
-    font-size: 2rem;
+    font-size: 1.7rem;
+  }
+
+  .hero {
+    padding: 80px 20px;
   }
 
   .project-description {
