--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -71,6 +71,33 @@ p {
   padding: 20px 40px;
 }
 
+.about-hero h1 {
+  font-weight: bold;
+  font-size: 3.5rem;
+  line-height: 1.2;
+}
+
+.about-hero h2 {
+  font-family: var(--default-font-family);
+  font-weight: normal;
+  font-size: 1.3rem;
+  line-height: 2;
+  color: #272142;
+}
+
+.about-hero {
+  padding: 100px 20px;
+}
+
+.about-hero-content {
+  padding: 40px;
+}
+
+.hero-picture {
+  border-radius: 15px;
+  max-width: 80%;
+}
+
 @media (max-width: 900px) {
   h1 {
     font-size: 3.5rem;
@@ -88,5 +115,22 @@ p {
   .project-description {
     padding: 0;
     text-align: center;
+  }
+
+  .hero-picture {
+    margin-left: 40px;
+    margin-top: 40px;
+  }
+
+  .about-hero {
+    padding: 0;
+  }
+
+  .about-hero-content {
+    text-align: center;
+  }
+
+  .about-hero-content p {
+    font-size: 0.8rem;
   }
 }
