--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -85,12 +85,24 @@ p {
   color: #272142;
 }
 
+.contant-container h3 {
+  font-family: var(--default-font-family);
+  font-weight: bold;
+  font-size: 2rem;
+  line-height: 1.5;
+  margin: 20px 0 0;
+}
+
 .contant-container {
   padding: 100px 20px;
 }
 
 .content {
   padding: 40px;
+}
+
+.content p {
+  font-size: 0.9rem;
 }
 
 .hero-picture {
