--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -38,6 +38,38 @@ p {
   line-height: 1.8rem;
 }
 
+.logo {
+  font-size: 2rem;
+  font-weight: bold;
+}
+
+nav {
+  padding: 20px 0;
+}
+
+nav ul {
+  padding: 0;
+  margin: 0;
+}
+
+nav li {
+  display: inline;
+  list-style: none;
+  line-height: 40px;
+  margin-left: 15px;
+}
+
+nav a {
+  text-decoration: none;
+  color: #272142;
+}
+
+nav a:hover,
+nav li.active a {
+  color: var(--branding-color);
+  transition: all 120ms ease-in-out;
+}
+
 .hero {
   background-color: var(--secondary-color);
   text-align: center;
@@ -120,6 +152,14 @@ p {
     font-size: 1.7rem;
   }
 
+  .logo span {
+    display: none;
+  }
+
+  .logo p {
+    font-size: 1rem;
+  }
+
   .hero {
     padding: 80px 20px;
   }
@@ -140,5 +180,9 @@ p {
 
   .content {
     text-align: center;
+  }
+
+  nav a {
+    font-size: 0.9rem;
   }
 }
