--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -64,7 +64,10 @@ nav a {
   color: #272142;
 }
 
-nav a:hover,
+li a:hover {
+  color: var(--branding-color);
+}
+
 nav li.active a {
   color: var(--branding-color);
   transition: all 120ms ease-in-out;
