--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -106,6 +106,19 @@ nav li.active a {
   padding: 15px 30px;
 }
 
+.img-tech {
+  flex-wrap: wrap;
+}
+
+.img-tech li {
+  list-style: none;
+  gap: 10%;
+}
+
+.img-tech img {
+  width: 80px;
+}
+
 .project-description {
   padding: 20px 40px;
 }
