--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -106,6 +106,12 @@ nav li.active a {
   padding: 15px 30px;
 }
 
+.btn:hover {
+  background-color: var(--branding-color);
+  color: black;
+  transition: all 120ms ease-in-out;
+}
+
 .img-tech {
   flex-wrap: wrap;
 }
