--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -36,6 +36,11 @@ h4 {
   font-size: 2.2rem;
 }
 
+h5 {
+  font-size: 1.8rem;
+  font-family: var(--default-font-family);
+}
+
 p {
   font-weight: normal;
   font-size: 1rem;
@@ -152,7 +157,7 @@ nav li.active a {
 }
 
 .contant-container {
-  padding: 100px 20px;
+  padding: 100px 20px 50px;
 }
 
 .content {
@@ -176,7 +181,7 @@ footer {
 footer .contact-box {
   background-color: var(--secondary-color);
   padding: 35px 40px 5px 40px;
-  margin: 70px 0;
+  margin: 70px 0 30px;
   border-radius: 10px;
 }
 
