--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -156,6 +156,10 @@ nav li.active a {
   margin: 20px 0 0;
 }
 
+.contant-container img {
+  max-height: 365px;
+}
+
 .contant-container {
   padding: 100px 20px 50px;
 }
